--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+
+    <!-- Css file link  -->
+    <link rel="stylesheet" href="./style.css">
 
     <title>Profile Card</title>
 </head>
@@ -31,8 +35,8 @@
 </div>
 
 <div class="buttons">
-    <button><i></i></button>
-    <button>UnSubscribe</button>
+    <button><i class="fa-sharp fa-solid fa-face-smile fa-shake" style="color: #37ff00;"></i></button>
+    <button><i class="fa-solid fa-heart fa-beat" style="color: #ff0000;"></i></button>
 
 </div>
 
