image added and chnages icon colour

--- a/index.html
+++ b/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Font Awesome -->
+    <!--======== Font Awesome ========-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 
-    <!-- Css file link  -->
+    <!--======= Css file link =========-->
     <link rel="stylesheet" href="./style.css">
 
+    <!--======== Main Title ==========-->
+
     <title>Profile Card</title>
+
 </head>
 <body>
 
 <div class="profile">
     <div class="img-area">
         <div class="inner-area">
-            <img src="" alt="">
+            <img src="./assets/1717129272153727111.jfif" alt="">
         </div>
     </div>
 
@@ -25,7 +29,7 @@
 <div class="icon dots"><i class="fa-solid fa-ellipsis-vertical"></i></div>
 
 <div class="name">Fasihi Ali</div>
-<div class="about">Web Developer</div>
+<div class="about">Web Developer And Video Editor</div>
 
 <div class="social-icons">
     <a href="" class="facebook"><i class="fa-brands fa-facebook-f"></i></a>
@@ -35,21 +39,12 @@
 </div>
 
 <div class="buttons">
-    <button><i class="fa-sharp fa-solid fa-face-smile fa-shake" style="color: #37ff00;"></i></button>
-    <button><i class="fa-solid fa-heart fa-beat" style="color: #ff0000;"></i></button>
-
+    <button>Smile <i class="fa-sharp fa-solid fa-face-smile fa-shake" style="color: blue;"></i></button>
+    <button>Like <i class="fa-solid fa-heart fa-beat" style="color: #ff0000;"></i></button>
 </div>
 
+</div> <!--======= main ========-->
+ 
 
-
-
-
-</div>
-
-
-
-
-
-    
 </body>
 </html>
