added background-image  and design button

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </div>
 
 <div class="buttons">
-    <button>Smile <i class="fa-sharp fa-solid fa-face-smile fa-shake" style="color: blue;"></i></button>
+    <button>Smile <i class="fa-sharp fa-solid fa-face-smile fa-beat" style="color:  black;"></i></button>
     <button>Like <i class="fa-solid fa-heart fa-beat" style="color: #ff0000;"></i></button>
 </div>
 
