back to top button

--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
     <link rel="stylesheet" href="./style.css">
 
     <!--======== Main Title ==========-->
+     <title>Profile Card</title>
 
-    <title>Profile Card</title>
+    <!--======= BOOTSTRAP 5 CDN =======-->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
+
+
 
 </head>
 <body>
@@ -44,7 +48,15 @@
 </div>
 
 </div> <!--======= main ========-->
- 
+
+<!--====== Back to Top Button =======-->
+
+<button type="button" class="btn btn-primary btn-back-to-top" id="backToTopBtn">
+&uarr; Back to Top
+</button>
+    
 
 </body>
 </html>
+
+<script src="./script.js"></script>
